--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
             <TextView
                     android:text="ID"
-                    android:gravity="center_vertical | center_horizontal"
+                    android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="match_parent"/>
@@ -23,7 +23,7 @@
 
             <TextView
                     android:text="PW"
-                    android:gravity="center_vertical | center_horizontal"
+                    android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="match_parent"/>
