--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -1,34 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".FileActivity">
 
-
-
-    <android.support.v7.widget.RecyclerView
-
-            android:id="@+id/recyclerView"
+<android.support.v4.widget.DrawerLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/drawerLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            tools:openDrawer="start">
 
-    </android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <LinearLayout
+                    android:id="@+id/topLayout"
+                    android:layout_width="match_parent"
+
+                    android:layout_margin="5dp"
+                          android:layout_height="wrap_content"
+                          android:orientation="horizontal">
+
+                <ProgressBar
+                        android:progressDrawable="@drawable/storageprogressbar"
+                        android:max="100"
+                        android:progress="50"
+
+                        android:id="@+id/pgbStorage"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="0dp"
+                        android:layout_weight="7"
+                        android:layout_height="25dp"
+                        />
+
+                <TextView
+                        android:id="@+id/tvStorage"
+                        android:layout_width="0dp"
+                        android:gravity="center"
+                          android:layout_weight="3"
+                          android:layout_height="25dp"
+                        android:textSize="15dp"
+                          android:text="TEST"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/columnNameLayout"
+                    android:layout_below="@+id/topLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    xmlns:android="http://schemas.android.com/apk/res/android">
+
+                <CheckBox android:id="@+id/chbAll" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:gravity="center"
+                        android:layout_width="0dp"
+                        android:layout_weight="5"
+                        android:layout_height="wrap_content"
+                        android:text="파일명"
+                />
+
+                <TextView android:layout_width="0dp"
+                          android:gravity="center"
+                          android:layout_weight="1"
+                          android:layout_height="wrap_content"
+                          android:text="크기"/>
+
+                <TextView android:layout_width="0dp"
+                          android:gravity="center"
+                          android:layout_weight="4"
+                          android:layout_height="wrap_content"
+                          android:text="날짜"/>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+
+                    android:id="@+id/recyclerView"
+                    android:layout_below="@+id/columnNameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+            >
+
+            </android.support.v7.widget.RecyclerView>
 
 
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:background="?android:attr/windowBackground"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation"/>
+            <android.support.design.widget.BottomNavigationView
+                    android:id="@+id/navBottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:background="?android:attr/windowBackground"
+                    android:layout_alignParentBottom="true"
+                    app:menu="@menu/navigation"/>
 
-</android.support.constraint.ConstraintLayout>
+        </RelativeLayout>
+
+
+        <android.support.design.widget.NavigationView
+                android:id="@+id/navSide"
+                android:layout_gravity = "end"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layoutDirection="rtl"
+                app:menu="@menu/sidemenu"
+                app:headerLayout="@layout/sideheader"
+        />
+
+
+</android.support.v4.widget.DrawerLayout>
