--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -10,6 +10,8 @@
             android:layout_weight="5"
             android:layout_height="wrap_content"
             android:text="NAME"
+            android:ellipsize="end"
+            android:maxLines="1"
     />
 
     <TextView android:id="@+id/tvSize"
