--- a/app/src/main/res/layout/sideheader.xml
+++ b/app/src/main/res/layout/sideheader.xml
@@ -6,25 +6,67 @@
               android:layout_marginTop="20dp"
               xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-            android:id="@+id/sideHeaderID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ID"
-    />
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:text="아이디"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:text=":"/>
+        <TextView
+                android:id="@+id/sideHeaderID"
+                android:layout_width="0dp"
+                android:layout_weight="8"
+                android:layout_height="wrap_content"
+                android:text=""/>
+    </LinearLayout>
 
-    <TextView
-            android:id="@+id/sideHeaderGrade"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="등급"
-    />
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 
-    <TextView
-            android:id="@+id/sideHeaderMaxStorage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="저장공간"
-    />
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:text="등급"/>
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:text=":"/>
+            <TextView
+
+                    android:id="@+id/sideHeaderGrade"
+                    android:layout_width="0dp"
+                    android:layout_weight="8"
+                    android:layout_height="wrap_content"
+                    android:text=""/>
+    </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:text="저장공간"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:text=":"/>
+            <TextView
+                    android:id="@+id/sideHeaderMaxStorage"
+                    android:layout_width="0dp"
+                    android:layout_weight="8"
+                    android:layout_height="wrap_content"
+                    android:text=""/>
+    </LinearLayout>
 
 </LinearLayout>
