--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -9,7 +9,6 @@
             android:layout_height="match_parent"
             tools:openDrawer="start">
 
-
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -116,14 +115,15 @@
                 app:headerLayout="@layout/sideheader"
         />
 
-    <LinearLayout android:layout_width="150dp"
-                  android:layout_height="match_parent"
-                  android:layout_gravity = "start"
-                  android:orientation="vertical"
-    >
+    <LinearLayout
+            android:id="@+id/rightSideView"
+            android:background="#FFFFFF"
+            android:layout_width="250dp"
+              android:layout_height="match_parent"
+              android:layout_gravity = "start"
+              android:orientation="vertical">
 
     </LinearLayout>
-
 
 
 </android.support.v4.widget.DrawerLayout>
