--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -3,11 +3,9 @@
 <android.support.v4.widget.DrawerLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/drawerLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:openDrawer="start">
+            android:layout_height="match_parent">
 
         <RelativeLayout
                 android:layout_width="match_parent"
@@ -79,17 +77,11 @@
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-
                     android:id="@+id/recyclerView"
                     android:layout_below="@+id/columnNameLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-            >
-
-            </android.support.v7.widget.RecyclerView>
+                    android:layout_marginHorizontal="5dp"/>
 
 
             <android.support.design.widget.BottomNavigationView
@@ -100,14 +92,15 @@
                     android:layout_marginStart="0dp"
                     android:background="?android:attr/windowBackground"
                     android:layout_alignParentBottom="true"
-                    app:menu="@menu/navigation"/>
+                    app:menu="@menu/navigation"
+                    app:labelVisibilityMode="labeled"/>
 
         </RelativeLayout>
 
 
         <android.support.design.widget.NavigationView
                 android:id="@+id/navSide"
-                android:layout_gravity = "end"
+                android:layout_gravity = "right"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layoutDirection="rtl"
@@ -119,10 +112,14 @@
             android:id="@+id/rightSideView"
             android:background="#FFFFFF"
             android:layout_width="250dp"
-              android:layout_height="match_parent"
-              android:layout_gravity = "start"
-              android:orientation="vertical">
+            android:layout_height="match_parent"
+             android:layout_gravity = "left"
+            android:orientation="vertical">
 
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/treeRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
     </LinearLayout>
 
 
