--- a/app/src/main/res/layout/rightsideheader.xml
+++ b/app/src/main/res/layout/rightsideheader.xml
@@ -8,63 +8,55 @@
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
         <TextView
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="아이디"/>
         <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:text=":"/>
         <TextView
                 android:id="@+id/sideHeaderID"
-                android:layout_width="0dp"
-                android:layout_weight="8"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""/>
     </LinearLayout>
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+    <LinearLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:text="등급"/>
 
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:gravity="center"
                     android:layout_height="wrap_content"
                     android:text=":"/>
             <TextView
 
                     android:id="@+id/sideHeaderGrade"
-                    android:layout_width="0dp"
-                    android:layout_weight="8"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""/>
     </LinearLayout>
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:text="저장공간"/>
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:gravity="center"
                     android:layout_height="wrap_content"
                     android:text=":"/>
             <TextView
                     android:id="@+id/sideHeaderMaxStorage"
-                    android:layout_width="0dp"
-                    android:layout_weight="8"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""/>
     </LinearLayout>
