--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -54,15 +54,13 @@
                 <CheckBox android:id="@+id/chbAll"
                           android:gravity="center"
                           android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_marginLeft="5dp"/>/>
+                          android:layout_height="wrap_content"/>
 
                 <TextView
                         android:gravity="center"
                         android:layout_width="0dp"
                         android:layout_weight="4"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
                         android:text="파일명"
                 />
 
@@ -70,15 +68,13 @@
                           android:gravity="center"
                           android:layout_weight="2"
                           android:layout_height="wrap_content"
-                          android:layout_marginHorizontal="5dp"
                           android:text="크기"/>
 
                 <TextView android:layout_width="0dp"
                           android:gravity="center"
                           android:layout_weight="4"
                           android:layout_height="wrap_content"
-                          android:text="날짜"
-                          android:layout_marginRight="5dp"/>/>
+                          android:text="날짜"/>
 
             </LinearLayout>
 
