--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -7,8 +7,7 @@
     <CheckBox android:id="@+id/chbItem"
               android:gravity="center"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="5dp"/>
+              android:layout_height="wrap_content"/>
 
     <TextView
             android:id="@+id/tvName"
@@ -17,17 +16,14 @@
             android:layout_weight="4"
             android:layout_height="wrap_content"
             android:text="NAME"
-            android:layout_marginHorizontal="5dp"
             android:ellipsize="end"
-            android:maxLines="1"
-    />
+            android:maxLines="1"/>
 
     <TextView android:id="@+id/tvSize"
               android:layout_width="0dp"
               android:gravity="center"
               android:layout_weight="2"
               android:layout_height="wrap_content"
-              android:layout_marginHorizontal="5dp"
               android:text="SIZE"/>
 
     <TextView android:id="@+id/tvDate"
@@ -35,7 +31,6 @@
               android:gravity="center"
               android:layout_weight="4"
               android:layout_height="wrap_content"
-              android:layout_marginRight="5dp"
               android:text="DATE"/>
 
 
