--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/drawerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawerLayout"
+        tools:openDrawer="start"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <RelativeLayout
                 android:layout_width="match_parent"
@@ -101,28 +102,32 @@
 
         <android.support.design.widget.NavigationView
                 android:id="@+id/rightSizeView"
-                android:layout_gravity = "right"
+                android:layout_gravity = "end"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 app:menu="@menu/rightsidemenu"
                 app:headerLayout="@layout/rightsideheader"
         />
 
-    <!--
+
     <LinearLayout
             android:id="@+id/leftSideView"
             android:background="#FFFFFF"
             android:layout_width="250dp"
             android:layout_height="match_parent"
-             android:layout_gravity = "left"
+             android:layout_gravity = "start"
             android:orientation="vertical">
+
+        <TextView
+                android:text="AAAAAAAA"
+                android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/treeRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
     </LinearLayout>
-    -->
+
 
 
 </android.support.v4.widget.DrawerLayout>
