--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -4,7 +4,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawerLayout"
-        tools:openDrawer="start"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -101,9 +100,9 @@
 
 
         <android.support.design.widget.NavigationView
-                android:id="@+id/rightSizeView"
+                android:id="@+id/rightSideView"
                 android:layout_gravity = "end"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="match_parent"
                 app:menu="@menu/rightsidemenu"
                 app:headerLayout="@layout/rightsideheader"
@@ -119,7 +118,7 @@
             android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/treeRecyclerView"
+                android:id="@+id/directoryView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
