--- a/app/src/main/res/layout/rightsideheader.xml
+++ b/app/src/main/res/layout/rightsideheader.xml
@@ -6,7 +6,11 @@
               android:layout_marginTop="20dp"
               xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+    <LinearLayout
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <TextView
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
@@ -24,6 +28,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:layout_margin="3dp"
             android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 
             <TextView
@@ -44,7 +49,12 @@
                     android:text=""/>
     </LinearLayout>
 
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+        <LinearLayout
+                android:layout_margin="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
             <TextView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
