--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -11,78 +11,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <LinearLayout
-                    android:id="@+id/topLayout"
-                    android:layout_width="match_parent"
 
-                    android:layout_margin="5dp"
-                          android:layout_height="wrap_content"
-                          android:orientation="horizontal">
-
-                <ProgressBar
-                        android:progressDrawable="@drawable/storageprogressbar"
-                        android:max="100"
-                        android:progress="50"
-
-                        android:id="@+id/pgbStorage"
-                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                        android:layout_width="0dp"
-                        android:layout_weight="7"
-                        android:layout_height="25dp"
-                        />
-
-                <TextView
-                        android:id="@+id/tvStorage"
-                        android:layout_width="0dp"
-                        android:gravity="center"
-                          android:layout_weight="3"
-                          android:layout_height="25dp"
-                        android:textSize="15dp"
-                          android:text="TEST"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:id="@+id/columnNameLayout"
-                    android:layout_below="@+id/topLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-
-                    xmlns:android="http://schemas.android.com/apk/res/android">
-
-                <CheckBox android:id="@+id/chbAll"
-                          android:gravity="center"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"/>
-
-                <TextView
-                        android:gravity="center"
-                        android:layout_width="0dp"
-                        android:layout_weight="4"
+                <LinearLayout
+                        android:id="@+id/topLayout"
+                        android:layout_width="match_parent"
+                        android:layout_margin="5dp"
                         android:layout_height="wrap_content"
-                        android:text="파일명"
-                />
+                        android:orientation="horizontal">
 
-                <TextView android:layout_width="0dp"
-                          android:gravity="center"
-                          android:layout_weight="2"
-                          android:layout_height="wrap_content"
-                          android:text="크기"/>
+                    <ProgressBar
+                            android:progressDrawable="@drawable/storageprogressbar"
+                            android:max="100"
+                            android:progress="50"
+                            android:id="@+id/pgbStorage"
+                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                            android:layout_width="0dp"
+                            android:layout_weight="7"
+                            android:layout_height="25dp"/>
 
-                <TextView android:layout_width="0dp"
-                          android:gravity="center"
-                          android:layout_weight="4"
-                          android:layout_height="wrap_content"
-                          android:text="날짜"/>
+                    <TextView
+                            android:id="@+id/tvStorage"
+                            android:layout_width="0dp"
+                            android:gravity="center"
+                            android:layout_weight="3"
+                            android:layout_height="25dp"
+                            android:textSize="15dp"
+                            android:text="TEST"/>
 
-            </LinearLayout>
+                </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/fileView"
-                    android:layout_below="@+id/columnNameLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/fileView"
+                        android:layout_below="@+id/topLayout"
+                        android:scrollbars="vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_above="@+id/navBottom"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentRight="true"
+                        />
 
 
             <android.support.design.widget.BottomNavigationView
@@ -120,7 +87,7 @@
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/directoryView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
     </LinearLayout>
 
 
