--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,14 +5,9 @@
     <color name="colorAccent">#D81B60</color>
 
 
-
-    <color name="primary">#2196F3</color>
-    <color name="primary_dark">#1976D2</color>
-    <color name="primary_light">#BBDEFB</color>
-    <color name="accent">#455A64</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
-
+    <color name="dodgerblue">#1e90ff</color>
+    <color name="steelblue">#4682b4</color>
+    <color name="slateblue">#6a5acd</color>
+    <color name="dimgray">#696969</color>
+    <color name="darkslategray">#2f4f4f</color>
 </resources>
