--- a/app/src/main/res/layout/rightsideheader.xml
+++ b/app/src/main/res/layout/rightsideheader.xml
@@ -1,74 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_height="wrap_content"
-              android:layout_width="match_parent"
-              android:orientation="vertical"
-              android:layout_marginLeft="20dp"
-              android:layout_marginTop="20dp"
-              xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:padding="10dp"
+                xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-            android:layout_margin="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="아이디"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:gravity="center"
-                android:layout_height="wrap_content"
-                android:text=":"/>
+
+    <ImageView
+            android:id="@+id/sideHeaderUserIcon"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/usericon"/>
+
+
         <TextView
                 android:id="@+id/sideHeaderID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아이디"
+                android:textSize="17dp"
+                android:layout_alignTop="@+id/sideHeaderUserIcon"
+                android:layout_toRightOf="@+id/sideHeaderUserIcon"
+                android:fontFamily="@font/ssangmundong"
+        />
+
+
+
+        <TextView
+                android:id="@+id/sideHeaderGrade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""/>
-    </LinearLayout>
+                android:text="등급"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_below="@+id/sideHeaderID"
+                android:layout_toRightOf="@+id/sideHeaderUserIcon"
+                android:fontFamily="@font/nanumx"/>
 
-    <LinearLayout
-            android:layout_margin="3dp"
-            android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:text="등급"/>
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text=":"/>
-            <TextView
-
-                    android:id="@+id/sideHeaderGrade"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=""/>
-    </LinearLayout>
-
-        <LinearLayout
-                android:layout_margin="3dp"
+        <TextView
+                android:layout_below="@id/sideHeaderGrade"
+                android:id="@+id/sideHeaderMaxStorage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="저장공간"
+                android:layout_toRightOf="@+id/sideHeaderUserIcon"
+                android:fontFamily="@font/nanumx"/>
 
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:text="저장공간"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text=":"/>
-            <TextView
-                    android:id="@+id/sideHeaderMaxStorage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=""/>
-    </LinearLayout>
+        <TextView
+                android:id="@+id/sideHeaderLogoutText"
+                android:visibility="gone"
+                android:text="로그인 해주세요"
+                android:fontFamily="@font/ssangmundongx"
+                android:textSize="25dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/sideHeaderUserIcon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
