--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
+
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
@@ -7,13 +9,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <android.support.v7.widget.Toolbar
+                    android:padding="0dp"
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/logobackground">
+
+                <ImageView
+                        android:src="@drawable/daljin_logo_horizon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+            </android.support.v7.widget.Toolbar>
 
                 <LinearLayout
                         android:id="@+id/topLayout"
+                        android:layout_below="@id/toolbar"
+                        android:layout_centerHorizontal="true"
                         android:layout_width="match_parent"
                         android:layout_margin="5dp"
                         android:layout_height="wrap_content"
@@ -22,7 +41,7 @@
                     <ProgressBar
                             android:progressDrawable="@drawable/storageprogressbar"
                             android:max="100"
-                            android:progress="50"
+                            android:progress="0"
                             android:id="@+id/pgbStorage"
                             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                             android:layout_width="0dp"
@@ -31,12 +50,14 @@
 
                     <TextView
                             android:id="@+id/tvStorage"
+                            android:fontFamily="@font/nanumx"
                             android:layout_width="0dp"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:layout_height="25dp"
+                            android:textColor="#000000"
                             android:textSize="15dp"
-                            android:text="TEST"/>
+                            android:text="0%"/>
 
                 </LinearLayout>
 
@@ -66,14 +87,26 @@
         </RelativeLayout>
 
 
-        <android.support.design.widget.NavigationView
-                android:id="@+id/rightSideView"
-                android:layout_gravity = "end"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                app:menu="@menu/rightsidemenu"
-                app:headerLayout="@layout/rightsideheader"
-        />
+    <LinearLayout android:layout_width="200dp"
+                  android:layout_height="match_parent"
+                  android:id="@+id/rightSideView"
+                  android:layout_gravity = "right"
+                  android:orientation="vertical"
+                  android:background="#FFFFFF">
+
+        <include
+                 layout= "@layout/rightsideheader"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 />
+        <include
+                 layout = "@layout/rightsidebody"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 />
+
+    </LinearLayout>
+
 
 
     <LinearLayout
