--- a/app/src/main/res/drawable/splash_gradient.xml
+++ b/app/src/main/res/drawable/splash_gradient.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-            android:angle="90"
-            android:endColor="#ffecd2"
-            android:startColor="#fcb69f"
+            android:angle="315"
+            android:startColor="#283048"
+            android:endColor="#859398"
             android:type="linear" />
 
 </shape>
