--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="0dp"
                     android:layout_marginStart="0dp"
-                    android:background="?android:attr/windowBackground"
+                    android:background="@color/logobackground"
                     android:layout_alignParentBottom="true"
                     app:menu="@menu/bottommenu"
                     app:labelVisibilityMode="labeled"/>
