--- a/app/src/main/res/layout/fileview_item.xml
+++ b/app/src/main/res/layout/fileview_item.xml
@@ -23,11 +23,13 @@
             android:id="@+id/fileViewTvName"
             android:fontFamily="@font/alienx"
             android:layout_toRightOf="@+id/fileViewImage"
+            android:layout_alignParentTop="true"
             android:textSize="14dp"
             android:textColor="@color/dimgray"
             android:layout_alignTop="@+id/fileViewChbItem"
             android:gravity="center_vertical"
-            android:layout_width="320dp"
+            android:layout_toLeftOf="@id/fileViewChbItem"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="NAME"/>
 
@@ -37,7 +39,8 @@
               android:textSize="10dp"
               android:textColor="@color/steelblue"
               android:layout_below="@+id/fileViewTvName"
-              android:layout_width="320dp"
+              android:layout_toLeftOf="@id/fileViewChbItem"
+              android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="2dp"
               android:layout_marginBottom="2dp"
@@ -48,7 +51,8 @@
               android:textColor="@color/steelblue"
               android:layout_toRightOf="@+id/fileViewImage"
               android:layout_below="@id/fileViewTvSize"
-              android:layout_width="320dp"
+              android:layout_toLeftOf="@id/fileViewChbItem"
+              android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
               android:text="DATE"/>
