--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -1,8 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+<android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
+    <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+                android:padding="0dp"
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/logobackground">
+
+            <ImageView
+                    android:src="@drawable/daljin_logo_horizon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
 <android.support.v4.widget.DrawerLayout
+        android:layout_marginTop="?attr/actionBarSize"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawerLayout"
@@ -15,19 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <android.support.v7.widget.Toolbar
-                    android:padding="0dp"
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/logobackground">
 
-                <ImageView
-                        android:src="@drawable/daljin_logo_horizon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-            </android.support.v7.widget.Toolbar>
 
                 <LinearLayout
                         android:id="@+id/topLayout"
@@ -126,3 +139,4 @@
 
 
 </android.support.v4.widget.DrawerLayout>
+</android.support.design.widget.CoordinatorLayout>
