--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -95,6 +95,8 @@
                     android:background="@color/logobackground"
                     android:layout_alignParentBottom="true"
                     app:menu="@menu/bottommenu"
+                    app:itemIconTint="@drawable/bottomnavitem"
+                    app:itemTextColor="@drawable/bottomnavitem"
                     app:labelVisibilityMode="labeled"/>
 
         </RelativeLayout>
