--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,16 +3,22 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="actionMenuTextColor">@color/logobackgroundtext</item>
+        <item name="colorPrimary">@color/logobackground</item>
+        <item name="colorPrimaryDark">@color/logobackgroundtext2</item>
+        <item name="colorAccent">@color/logobackgroundtext</item>
         <item name="android:actionMenuTextColor">@color/logobackgroundtext</item>
+        <item name="android:textColorSecondary">@color/logobackgroundtext</item>
     </style>
+
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
 
     </style>
-
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
